--- a/.github/workflows/file.yml
+++ b/.github/workflows/file.yml
@@ -498,12 +498,12 @@ jobs:
     needs: [create-new-infrastructure, qa-approval]
     runs-on: ubuntu-latest
     env:
-      OLD_ASG_NAME: ${{ env.OLD_ASG_NAME }}
-      NEW_ASG_NAME: ${{ needs.create-new-infrastructure.outputs.new_asg_name }}
-      OLD_TG_ARN: ${{ env.OLD_TG_ARN }}
-      NEW_TG_ARN: ${{ needs.create-new-infrastructure.outputs.new_tg_arn }}
-      ALB_LISTENER_ARN: ${{ env.ALB_LISTENER_ARN }}
-      MAX_NEW_CAPACITY: ${{ env.TOTAL_INSTANCES }}
+        OLD_ASG_NAME: ${{ secrets.OLD_ASG_NAME }}
+        NEW_ASG_NAME: ${{ needs.create-new-infrastructure.outputs.new_asg_name }}
+        OLD_TG_ARN: ${{ secrets.OLD_TG_ARN }}
+        NEW_TG_ARN: ${{ needs.create-new-infrastructure.outputs.new_tg_arn }}
+        ALB_LISTENER_ARN: ${{ secrets.ALB_LISTENER_ARN }}
+        MAX_NEW_CAPACITY: ${{ env.TOTAL_INSTANCES }}
     steps:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v2
