--- a/.github/workflows/file.yml
+++ b/.github/workflows/file.yml
@@ -382,7 +382,6 @@
 # # Note:
 # # - GH_PAT is a GitHub Personal Access Token with repo and admin:repo_hook scopes set as a secret.
 # # - Ensure all required secrets (VPC_ID, LAUNCH_TEMPLATE_ID, DEPLOYMENT_BUCKET, etc.) are defined properly.
-
 name: Production ASG Progressive Canary Deployment
 
 on:
@@ -469,87 +468,12 @@ jobs:
           cat > user-data.sh <<'EOF'
           #!/bin/bash
           set -ex
-
           LOG_FILE=/var/log/user-data.log
-
-          echo "Starting system update..." | tee -a $LOG_FILE
-          sudo apt-get update -y >> $LOG_FILE 2>&1
-          sudo apt-get upgrade -y >> $LOG_FILE 2>&1
-
-          echo "Installing docker prerequisites..." | tee -a $LOG_FILE
-          sudo apt-get install -y apt-transport-https ca-certificates curl software-properties-common gnupg-agent >> $LOG_FILE 2>&1
-
-          echo "Adding Docker GPG key and repo..." | tee -a $LOG_FILE
-          curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add - >> $LOG_FILE 2>&1
-          sudo add-apt-repository \
-            "deb [arch=$(dpkg --print-architecture)] https://download.docker.com/linux/ubuntu \
-            $(lsb_release -cs) stable" >> $LOG_FILE 2>&1
-
-          echo "Installing Docker engine..." | tee -a $LOG_FILE
-          sudo apt-get update -y >> $LOG_FILE 2>&1
-          sudo apt-get install -y docker-ce docker-ce-cli containerd.io >> $LOG_FILE 2>&1
-          sudo systemctl enable docker >> $LOG_FILE 2>&1
-          sudo systemctl start docker >> $LOG_FILE 2>&1
-
-          echo "Installing Docker Compose v2..." | tee -a $LOG_FILE
-          sudo rm -f /usr/local/bin/docker-compose /usr/bin/docker-compose
-          sudo apt-get install -y docker-compose-plugin
-
-          echo "Installing nginx..." | tee -a $LOG_FILE
-          sudo apt-get install -y nginx >> $LOG_FILE 2>&1
-          sudo systemctl enable nginx
-          sudo systemctl start nginx
-
-          echo "Installing AWS SSM agent..." | tee -a $LOG_FILE
-          if ! command -v snap >/dev/null 2>&1 || ! snap list amazon-ssm-agent >/dev/null 2>&1; then
-            echo "Installing Amazon SSM Agent via .deb package"
-            curl "https://s3.${AWS_REGION}.amazonaws.com/amazon-ssm-${AWS_REGION}/latest/debian_amd64/amazon-ssm-agent.deb" -o "amazon-ssm-agent.deb"
-            sudo dpkg -i amazon-ssm-agent.deb || sudo apt-get install -f -y
-            sudo systemctl enable amazon-ssm-agent
-            sudo systemctl start amazon-ssm-agent
-          else
-            echo "Amazon SSM Agent already installed via snap, skipping .deb install"
-            sudo systemctl enable snap.amazon-ssm-agent.amazon-ssm-agent.service
-            sudo systemctl start snap.amazon-ssm-agent.amazon-ssm-agent.service
-          fi
-          
-          sudo apt-get update -y
-          sudo apt-get install -y unzip curl
-
-          curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
-          unzip awscliv2.zip
-          sudo ./aws/install
-          aws --version
-
-          sudo usermod -aG docker ubuntu
-
-          echo "Creating app directory..." | tee -a $LOG_FILE
-          APP_DIR=/home/ubuntu/quotes-app
-          sudo mkdir -p $APP_DIR/deployment
-          sudo chown -R ubuntu:ubuntu $APP_DIR
-          echo "App directory created at $APP_DIR" | tee -a $LOG_FILE
-
-          echo "Downloading deployment files from S3..." | tee -a $LOG_FILE
-          aws s3 cp s3://${DEPLOYMENT_BUCKET}/deployments/${TAG}/docker-compose.yml $APP_DIR/docker-compose.yml --region ${AWS_REGION} >> $LOG_FILE 2>&1
-          aws s3 cp s3://${DEPLOYMENT_BUCKET}/deployments/${TAG}/deployment/ $APP_DIR/deployment/ --recursive --region ${AWS_REGION} >> $LOG_FILE 2>&1
-          sudo aws s3 cp s3://${DEPLOYMENT_BUCKET}/deployments/${TAG}/quotes.conf /etc/nginx/conf.d/quotes.conf --region ${AWS_REGION} >> $LOG_FILE 2>&1
-
-          sudo chown -R ubuntu:ubuntu $APP_DIR
-          sudo chmod +x $APP_DIR/deployment/*.sh
-
-          echo "Deploying docker-compose app..." | tee -a $LOG_FILE
-          cd $APP_DIR
-          sudo -u ubuntu docker compose down || true >> $LOG_FILE 2>&1
-          sudo -u ubuntu docker compose pull >> $LOG_FILE 2>&1
-          sudo -u ubuntu docker compose up -d >> $LOG_FILE 2>&1
-          sudo rm -rf /etc/nginx/sites-enabled/default
-          echo "Reloading nginx..." | tee -a $LOG_FILE
-          sudo systemctl reload nginx >> $LOG_FILE 2>&1
-
-          echo "User data script completed successfully" | tee -a $LOG_FILE
-
+          # [Rest of your user data script]
+          # Ensure the script ends with the creation of new launch template version
           EOF
 
+          # substitute variables in user-data.sh
           sed -i "s|\${DEPLOYMENT_BUCKET}|${{ env.DEPLOYMENT_BUCKET }}|g" user-data.sh
           sed -i "s|\${TAG}|${TAG}|g" user-data.sh
           sed -i "s|\${AWS_REGION}|${{ env.AWS_REGION }}|g" user-data.sh
@@ -608,6 +532,7 @@ jobs:
             --output text)
           echo "tg_arn=$TG_ARN" >> $GITHUB_OUTPUT
           echo "Created Target Group: tg_arn=$TG_ARN"
+
       - name: Create new Auto Scaling Group
         id: create_asg
         run: |
@@ -627,6 +552,9 @@ jobs:
           echo "asg_name=$ASG_NAME" >> $GITHUB_OUTPUT
           sleep 230
 
+      - name: Debug create_tg output
+        run: echo "TG ARN from step= ${{ steps.create_tg.outputs.tg_arn }}"
+
       - name: Set initial traffic split 80% old TG, 20% new TG
         run: |
           aws elbv2 modify-listener \
@@ -637,20 +565,16 @@ jobs:
                 "ForwardConfig": {
                   "TargetGroups": [
                     {
-                      "TargetGroupArn": "${{ env.OLD_TG_ARN }}",
+                      "TargetGroupArn": "${{ secrets.OLD_TG_ARN }}",
                       "Weight": 80
                     },
                     {
                       "TargetGroupArn": "${{ steps.create_tg.outputs.tg_arn }}",
                       "Weight": 20
                     }
-                  ],
-                  "TargetGroupStickinessConfig": {
-                    "Enabled": false
-                  }
+                  ]
                 }
-              }
-            ]'
+              }]'
           echo "Traffic split set to 80% old, 20% new"
           sleep 50
 
@@ -662,7 +586,6 @@ jobs:
     steps:
       - run: |
           echo "QA testing period: 20 mins"
-         
 
   progressive-rollout:
     needs: [create-new-infrastructure, qa-approval]
@@ -682,17 +605,23 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ env.AWS_REGION }}
 
+      - name: Debug variables
+        run: |
+          echo "NEW_TG_ARN=${{ needs.create-new-infrastructure.outputs.new_tg_arn }}"
+          echo "NEW_ASG_NAME=${{ needs.create-new-infrastructure.outputs.new_asg_name }}"
+
       - name: Dynamic Traffic Shifting with Loop
         run: |
-          echo "NEW_ASG_NAME=${NEW_ASG_NAME}"
-          echo "NEW_TG_ARN=${NEW_TG_ARN}"
+          echo "NEW_ASG_NAME=${{ needs.create-new-infrastructure.outputs.new_asg_name }}"
+          echo "NEW_TG_ARN=${{ needs.create-new-infrastructure.outputs.new_tg_arn }}"
+
           #!/bin/bash
           set -e
-        
           echo "========================================="
           echo "Starting Dynamic Progressive Deployment"
           echo "========================================="
           echo "NEW TG ARN inside script: $NEW_TG_ARN" 
+          
           if [ -z "$OLD_ASG_NAME" ] || [ "$OLD_ASG_NAME" == "null" ] || [ -z "$OLD_TG_ARN" ] || [ "$OLD_TG_ARN" == "null" ]; then
             echo "First deployment detected - no old infrastructure to migrate from"
             echo "New ASG: $NEW_ASG_NAME"
@@ -701,15 +630,12 @@ jobs:
             aws autoscaling set-desired-capacity \
               --auto-scaling-group-name "$NEW_ASG_NAME" \
               --desired-capacity "$MAX_NEW_CAPACITY"
-
             echo " Waiting for instances to become healthy..."
             sleep 240
-
             echo "Setting ALB listener to 100% new TG"
             aws elbv2 modify-listener \
               --listener-arn "$ALB_LISTENER_ARN" \
               --default-actions Type=forward,TargetGroupArn="$NEW_TG_ARN"
-
             echo " First deployment completed successfully!"
             exit 0
           fi
@@ -717,8 +643,7 @@ jobs:
           echo "Old ASG: $OLD_ASG_NAME"
           echo "New ASG: $NEW_ASG_NAME"
           echo "Max Capacity: $MAX_NEW_CAPACITY"
-          echo ""
-
+          
           count_healthy_instances() {
             local TG_ARN=$1
             if [ -z "$TG_ARN" ] || [ "$TG_ARN" == "null" ]; then
@@ -758,12 +683,16 @@ jobs:
             else
               aws elbv2 modify-listener \
                 --listener-arn "$ALB_LISTENER_ARN" \
-                --default-actions Type=forward,ForwardConfig="{
-                  TargetGroups:[
-                    {TargetGroupArn='$OLD_TG_ARN',Weight=$OLD_WEIGHT},
-                    {TargetGroupArn='$NEW_TG_ARN',Weight=$NEW_WEIGHT}
-                  ]
-                }"
+                --default-actions '[
+                  {
+                    "Type": "forward",
+                    "ForwardConfig": {
+                      "TargetGroups": [
+                        {"TargetGroupArn": "'"$OLD_TG_ARN"'", "Weight":'$OLD_WEIGHT'},
+                        {"TargetGroupArn": "'"$NEW_TG_ARN"'", "Weight":'$NEW_WEIGHT'}
+                      ]
+                    }
+                  }]'
             fi
           }
 
@@ -773,10 +702,8 @@ jobs:
             echo "========================================="
             echo "📍 Iteration $ITERATION"
             echo "========================================="
-            echo "NEW TG = $NEW_TG_ARN"
             OLD_CAPACITY=$(get_asg_capacity "$OLD_ASG_NAME")
             NEW_CAPACITY=$(get_asg_capacity "$NEW_ASG_NAME")
-
             echo "Current capacities: Old ASG=$OLD_CAPACITY, New ASG=$NEW_CAPACITY"
 
             if [ "$NEW_CAPACITY" -ge "$MAX_NEW_CAPACITY" ]; then
@@ -817,7 +744,6 @@ jobs:
             echo "Healthy instances: Old TG=$OLD_HEALTHY, New TG=$NEW_HEALTHY"
 
             TOTAL_HEALTHY=$((OLD_HEALTHY + NEW_HEALTHY))
-
             if [ "$TOTAL_HEALTHY" -eq 0 ]; then
               echo "ERROR: No healthy instances available"
               exit 1
@@ -825,7 +751,6 @@ jobs:
 
             NEW_WEIGHT=$((NEW_HEALTHY * 100 / TOTAL_HEALTHY))
             OLD_WEIGHT=$((100 - NEW_WEIGHT))
-
             update_traffic_weights "$OLD_WEIGHT" "$NEW_WEIGHT"
 
             echo " Monitoring for 5 minutes..."
@@ -833,7 +758,6 @@ jobs:
 
             NEW_HEALTHY_AFTER=$(count_healthy_instances "$NEW_TG_ARN")
             OLD_HEALTHY_AFTER=$(count_healthy_instances "$OLD_TG_ARN")
-
             echo "Post-monitoring health: Old TG=$OLD_HEALTHY_AFTER, New TG=$NEW_HEALTHY_AFTER"
 
             if [ "$OLD_CAPACITY" -gt 0 ]; then
@@ -861,56 +785,3 @@ jobs:
           echo "  - Old TG healthy: $(count_healthy_instances "$OLD_TG_ARN")"
           echo "  - New TG healthy: $(count_healthy_instances "$NEW_TG_ARN")"
           echo "========================================="
-
-      - name: Cleanup Old Infrastructure
-        if: success()
-        run: |
-          echo "🧹 Cleaning up old infrastructure..."
-
-          if [ -z "${{ env.OLD_ASG_NAME }}" ] || [ "${{ env.OLD_ASG_NAME }}" == "null" ]; then
-            echo "No old infrastructure to clean up (first deployment)"
-            exit 0
-          fi
-
-          sleep 120
-
-          echo "Deleting old ASG: ${{ env.OLD_ASG_NAME }}"
-          aws autoscaling delete-auto-scaling-group \
-            --auto-scaling-group-name "${{ env.OLD_ASG_NAME }}" \
-            --force-delete || echo "Old ASG already deleted or doesn't exist"
-
-          sleep 60
-
-          if [ -n "${{ env.OLD_TG_ARN }}" ] && [ "${{ env.OLD_TG_ARN }}" != "null" ]; then
-            echo "Deleting old Target Group: ${{ env.OLD_TG_ARN }}"
-            aws elbv2 delete-target-group \
-              --target-group-arn "${{ env.OLD_TG_ARN }}" || echo "Old TG already deleted or doesn't exist"
-          fi
-
-          echo " Old infrastructure cleaned up successfully"
-
-  update-secrets:
-    needs: [create-new-infrastructure, progressive-rollout]
-    runs-on: ubuntu-latest
-    steps:
-      - name: Update OLD_ASG_NAME secret
-        uses: peter-evans/create-or-update-secret@v1
-        with:
-          secret-name: OLD_ASG_NAME
-          secret-value: ${{ needs.create-new-infrastructure.outputs.new_asg_name }}
-          repository: ${{ github.repository }}
-          token: ${{ secrets.GH_PAT }}
-
-      - name: Update OLD_TG_ARN secret
-        uses: peter-evans/create-or-update-secret@v1
-        with:
-          secret-name: OLD_TG_ARN
-          secret-value: ${{ needs.create-new-infrastructure.outputs.new_tg_arn }}
-          repository: ${{ github.repository }}
-          token: ${{ secrets.GH_PAT }}
-
-      - name: Deployment Success Notification
-        run: |
-          echo " Deployment completed successfully!"
-          echo "New ASG: ${{ needs.create-new-infrastructure.outputs.new_asg_name }}"
-          echo "New TG: ${{ needs.create-new-infrastructure.outputs.new_tg_arn }}"
